# codesteward

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backlog/: 001-evidence-validation-pipeline.md  002-evidence-retrieval-layer.md  003-reviewer-discovery-v2.md  004-repo-mapping-v2.md  005-reviewer-profiler-v2.md  006-aggregator-intelligence-v2.md  007-evaluation-replay-framework.md  008-agent-loop-interface.md  009-operability-and-governance.md  010-bot-cve-pr-filtering.md  meta.md
codesteward/: __init__.py  aggregator.py  cli.py  config.py  db.py  discovery.py  evidence.py  github_client.py  ingest.py  pr_filter.py  profiler.py  render.py  repo_mapper.py  schemas.py  simulator.py
docs/: README.md  agents.md  architecture.md  cli-reference.md  configuration.md  data-model.md  development.md  evidence-grounding.md  heuristic-engine.md  reviewer-profiles.md
tests/: test_aggregator.py  test_cli.py  test_codeowners.py  test_config.py  test_db.py  test_e2e.py  test_evidence.py  test_owners.py  test_pr_filter.py  test_ranking.py
